WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268309
WebKit::displayStorageAccessAlert leaks an NSTextView
https://bugs.webkit.org/show_bug.cgi?id=268309
Summary
WebKit::displayStorageAccessAlert leaks an NSTextView
David Kilzer (:ddkilzer)
Reported
2024-01-29 10:05:28 PST
WebKit::displayStorageAccessAlert leaks an NSTextView. Found by clang static analyzer. Regressed in: [Experimental] Exercise storage access quirks for organizations
https://bugs.webkit.org/show_bug.cgi?id=265800
<
rdar://119141675
>
https://commits.webkit.org/271821@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-29 10:05:55 PST
<
rdar://problem/121864691
>
David Kilzer (:ddkilzer)
Comment 2
2024-01-29 10:26:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23436
EWS
Comment 3
2024-01-29 12:34:18 PST
Committed
273678@main
(2a038d86cb46): <
https://commits.webkit.org/273678@main
> Reviewed commits have been landed. Closing PR #23436 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug