Cherry-pick 2a038d86cb46. rdar://121864691

WebKit::displayStorageAccessAlert leaks an NSTextView
    https://bugs.webkit.org/show_bug.cgi?id=268309
    <rdar://121864691>

    Reviewed by Aditya Keerthi.

    * Source/WebKit/UIProcess/Cocoa/WKStorageAccessAlert.mm:
    (WebKit::displayStorageAccessAlert):
    - Use adoptNS() to fix the leak.
    - Change `mutableString` to `auto *` type to hint that it's a pointer.

    Canonical link: https://commits.webkit.org/273678@main

Identifier: 272448.419@safari-7618-branch